--- a/katuun-general-css.css
+++ b/katuun-general-css.css
@@ -1,7 +1,6 @@
 html {
     font-size: 16px;
 }
-
 * {
     margin: 0;
     padding: 0;
@@ -10,34 +9,29 @@ html {
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
-
 :root {
     --header-top:17.5rem;
     --intro-pic-top:-17.5rem;
+    --div-background-cheat:rgb(10, 9, 9);
 }
-
 body {
     background-color: rgb(140, 155, 169);
 }
-
 img {
     width: 100%;
     height: 100%;
 }
-
 abbr {
     text-decoration: none;
 }
-
 button,#submit {
     font-size: 1rem;
 }
-
-nav {
+.nav_bar {
     background-color: rgba(0, 0, 0, 0.9); 
     color:white;
     position: fixed;
-    top:0;
+    top:.1rem;
     left:50%;
     transform: translateX(-50%);
     z-index: 5;
@@ -58,30 +52,32 @@ nav {
             margin: auto;
         }
     }
-    ul {
+    nav {
         width: 60%;
         min-width: 20rem;
         overflow-x: auto;
-        list-style: none;
+        overflow-y: hidden;
         display: flex;
         align-items: center; 
         justify-content: space-between;
         gap: 3rem;
         padding:0 1rem 0 1rem;
-        li {
+        a { 
             min-width: max-content;
-        }
-        li:last-of-type {
-            button {
-                padding: .5rem 1rem;
-                border-radius: 2rem;
-                border-color: transparent;
-                background-color: aliceblue; 
-            }
-        }
+            padding:1.2rem;
+            transition:background-color,color 100ms;
+        }        
     }
 }
-
+nav a:hover {
+    background-color: rgba(240, 248, 255, 0.279);
+    cursor:pointer;
+}
+nav a:active {
+    background-color: rgba(2, 137, 255, 0.655);
+    color:black;
+    cursor: pointer;
+}
 .top_section {
     background-color: rgba(0, 0, 0, 65%);
     height: 67.5rem;
@@ -105,20 +101,19 @@ header {
         }
         h2 {
             font-weight: normal;
-
         }
         p:last-of-type {
             font-size: 1.5rem;
         }
-        button {
+        a {
             padding: .5rem 1rem;
             border-radius: 2rem;
             border-color: transparent;
             background-color:aliceblue;
-            margin: 1.5rem auto;
+            color: black;
+            transition: background-color,color 100ms;
         }
     }
-
     form {
         grid-area: form;
         justify-self: end;
@@ -187,6 +182,7 @@ header {
             border-radius: 2rem;
             vertical-align: middle;
             padding: .5rem 1rem;
+            transition: background-color,color 100ms;
         }
         div {
             display: flex;
@@ -199,7 +195,6 @@ header {
             border-color: transparent;
         }
     }
-
     .intro_pic {
         width:100%;
         height:67.5rem;
@@ -212,7 +207,24 @@ header {
     }
 }
 }
-
+#submit:hover {
+    background-color:  rgba(255, 255, 255, 0.475);
+    cursor:pointer;
+}
+#submit:active {
+    background-color: rgba(2, 137, 255, 0.655);
+    color:black;
+    cursor: pointer;
+}
+.top_section header .intro_text a:hover {
+    background-color: rgb(140, 155, 169);
+    cursor:pointer;
+}
+.top_section header .intro_text a:active {
+    background-color: white;
+    color:black;
+    cursor: pointer;
+}
 .comments {
     margin: 12rem 0 0 0;
     display: flex;
@@ -242,9 +254,7 @@ header {
             flex-wrap: wrap;
         }
     }
-    
 }
-
 .services {
     background-color: rgb(14, 24, 0);
     color: white;
@@ -276,8 +286,11 @@ header {
         justify-content: space-between;
         gap:1rem;
     div {
-        width:100%;
         height:20rem;
+        overflow: hidden;
+        img {
+            transition:transform 1000ms;
+        }
     }
     figcaption {
         text-align: center;
@@ -291,7 +304,6 @@ header {
         border-color: transparent;
         background-color:aliceblue;
     }
-
     .support {
         background:url(Pictures/small-service-cutomer-support_upscayl_4x_realesrgan-x4plus.jpg);
     }
@@ -307,8 +319,20 @@ header {
     }
 }
 
+.services {
+    .contents {
+        figure {
+            img:hover {
+            transform:scale(1.2);
+            cursor:pointer;
+            }
+        }
+    }
+}
 .features {
-    margin:4rem auto;
+    position: relative;
+    z-index: 4;
+    margin:4rem auto 0 auto;
     padding: 3rem 0;
     background-color:rgb(45, 71, 94);
     width:90%;
@@ -329,19 +353,59 @@ header {
         width:7rem;
         height:5.25rem;
         justify-self: center;
+        img {
+            transition: transform 1000ms;
+        }
+    }
+    .teletoon {
+        background-image: url(Pictures/small-feature-teletoon+_upscayl_4x_realesrgan-x4plus.jpg);
+    }
+    .nickeledeon {
+        background-image: url(Pictures/small-feature-nickeledeon_upscayl_4x_realesrgan-x4plus.jpg);
+    }
+    .disney {
+        background-image: url(Pictures/small-feature-disney_upscayl_4x_realesrgan-x4plus.jpg);
+    }
+    .guilli {
+        background-image: url(Pictures/small-feature-guilli-africa_upscayl_4x_realesrgan-x4plus.jpg);
+    }
+    .teletoon,.nickeledeon,.disney,.guilli {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
     }
 }
-
+.features {
+    .contents {
+        div {
+            img:hover {
+                transform: scale(1.5);
+                cursor:pointer;
+            }
+        }
+    }
+}
+.fill_space{
+    height:4rem;
+    width:100%;
+    position: relative;
+    z-index:4;
+    background-color: rgb(140, 155, 169);
+}
 .some_cartoons {
+    color: aliceblue;
     display: flex;
     flex-direction: column;
-    gap:.5rem;
     .header {
+        padding-top: 3rem;
+        position: relative;
+        z-index: 4;
         text-align: center;
         display: flex;
         flex-direction: column;
         gap:1rem;
+        background-color: var(--div-background-cheat);
         h1 {
             font-size: 2rem;
         }
@@ -355,18 +419,17 @@ header {
         }
     }
     .contents {
-        width: 90%;
+        background-color: var(--div-background-cheat);
+        width: 100%;
         margin: auto;
-        display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
-        gap:3rem;
+        display: grid; 
+        grid-template-columns: repeat(auto-fit,minmax(30rem,1fr)); 
         figure {
             justify-self: center;
             display: flex;
             flex-direction: column;
-            gap:1rem;
         div {
-            width:33rem;
+            width:30rem;
             height: 30rem;
         }
         figcaption {
@@ -374,15 +437,75 @@ header {
             font-weight: bold;
         }
     }
-        .dragon_ballz,.nickylarson,.naruto,.kid {
-            display: none;
+        .dragon_ballz.left {
+            div {
+            background-image: url(Pictures/small-dragon-ballz-1.jpg);
+            }
+        }
+        .dragon_ballz.right {
+            div {
+            background-image: url(Pictures/small-dragon-ballz-2.jpg);
+            }
+        }
+        .nickylarson.left{
+            div {
+            background-image: url(Pictures/small-nickylarson-1.jpg);
+            }
+        }
+        .nickylarson.right{
+            div {
+            background-image: url(Pictures/small-nickylarson-2.jpg);
+            }
+        }
+        .naruto.left {
+            div {
+            background-image: url(Pictures/small-naruto-1.jpg);
+            }
+        }
+        .naruto.right {
+            div {
+            background-image: url(Pictures/small-naruto-2.jpg);
+            }
+        }
+        .kid.left {
+            div {
+            background-image: url(Pictures/small-kid-watching-cartoon-1_upscayl_4x_realesrgan-x4plus.png);
+            }
+        }
+        .kid.right {
+            div {
+            background-image: url(Pictures/small-kid-watching-cartoon-2_upscayl_4x_realesrgan-x4plus.png)
+            }
+        }
+        .kaeloo.left {
+            div {
+            background-image: url(Pictures/small-kaeloo-1_upscayl_4x_realesrgan-x4plus.jpg);
+            }
+        }
+        .kaeloo.right {
+            div {
+            background-image: url(Pictures/small-kaeloo-2_upscayl_4x_realesrgan-x4plus.jpg);
+            }
+        }
+        .dragon_ballz,.nickylarson,.naruto,.kid,.kaeloo {
+            div {
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            }
         }
     }
 }
-
-.how_we_work {
-    margin: 4rem 0 0 0;
+.fill_space.two{
+    height:4rem;
+    width:100%;
     position: relative;
+    z-index:4;
+    background-color: var(--div-background-cheat);
+}
+.how_we_work {
+    position: relative;
+    z-index:4;
     .how_we_work_background {
         height:30rem; 
         background-image:url(Pictures/small-how-we-work_upscayl_4x_realesrgan-x4plus.jpg);
@@ -441,7 +564,6 @@ header {
             }
     }
 }
-
 .our_plan {
     position: relative;
     background-color: rgb(14, 24, 0);
@@ -520,7 +642,6 @@ header {
         }
     }
 }
-
 .your_choice {
     width: 90%;
     margin: 4rem auto 0 auto;
@@ -576,7 +697,6 @@ header {
         }
     }
 }
-
 .closing_image {
     height:40rem;
     margin-top: 4rem;
@@ -585,7 +705,6 @@ header {
     background-position: center;
     background-size: cover;
 }
-
 footer {
     .foot_content {
         height:max-content;
@@ -644,5 +763,143 @@ footer {
         * {
             flex-shrink: 1;
         }
+    }
+}
+#dragon_ballz_ID  {
+    animation:dragon_ballz_anime ease-out 50000ms infinite alternate;
+}
+#nickylarson_ID {
+    animation:nickylarson_anime ease-out 50000ms infinite alternate;
+}
+#naruto_ID {
+    animation:naruto_anime ease-out 50000ms infinite alternate;
+}
+#kaeloo_ID {
+    animation:kaeloo_anime ease-out 50000ms infinite alternate;
+}
+#kid_ID {
+    animation:kid_anime ease-out 50000ms infinite alternate;
+}
+
+@keyframes dragon_ballz_anime  {
+    0% {
+        transform:translateY(0);
+        display:block;
+    }
+    14% {
+        transform: translateY(0);
+        display:block;
+    }
+    20% {
+        transform:translateY(240%);
+        display: none;
+    }
+    100% {
+        transform:translateY(240%);
+        display: none;
+    }
+}
+@keyframes nickylarson_anime {
+    0% {
+        transform:translateY(0);
+        display: none;
+    }
+    19.99% {
+        transform:translateY(0);
+        display: none;
+    }
+    20% {
+        transform:translateY(0);
+        display: block;
+    }
+    20% {
+        transform:translateY(0);
+        display: block;
+    }
+    34% {
+        transform:translateY(0);
+        display: block;
+    }
+    40% {
+        transform:translateY(240%);
+        display: none;   
+    }
+    100% {
+        transform:translateY(240%);
+        display: none;
+    }
+}
+@keyframes naruto_anime {
+    0% {
+        transform:translateY(0);
+        display:none;
+    }
+    39.99% {
+        transform:translateY(0);
+        display:none
+    }
+    40% {
+        transform:translateY(0);
+        display:block;
+    }
+    54% {
+        transform:translateY(0);
+        display:block;
+    }
+    60% {
+        transform:translateY(240%);
+        display:none;
+    }
+    100% {
+        transform:translateY(240%);
+        display: none;
+    }
+}
+@keyframes kaeloo_anime {
+    0% {
+        transform: translateY(0);
+        display:none;
+    }
+    59.99% {
+        transform: translateY(0);
+        display:none;
+    }
+    60% {
+        transform: translateY(0);
+        display:block;
+    }
+    74% {
+        transform: translateY(0);
+        display:block;
+    }
+    80% {
+        transform: translateY(240%);
+        display:none;
+    }
+    100% {
+        transform: translateY(240%);
+        display:none;
+    }
+}
+@keyframes kid_anime {
+    0% {
+        transform: translateY(0);
+        display:none;
+    }
+    79.99% {
+        transform: translateY(0);
+        display:none;
+    }
+    80% {
+        transform: translateY(0);
+        display:block;
+    }
+    94% {
+        transform: translateY(0);
+        display:block;
+    }
+    100% {
+        transform: translateY(240%);
+        display: none;
     }
 }
