--- a/katuun-general-css.css
+++ b/katuun-general-css.css
@@ -24,8 +24,12 @@ img {
 abbr {
     text-decoration: none;
 }
-button,#submit {
+#submit {
     font-size: 1rem;
+}
+a{
+    text-decoration: none;
+
 }
 .nav_bar {
     background-color: rgba(0, 0, 0, 0.9); 
@@ -66,6 +70,7 @@ button,#submit {
             min-width: max-content;
             padding:1.2rem;
             transition:background-color,color 100ms;
+            color: aliceblue;
         }        
     }
 }
@@ -81,7 +86,7 @@ nav a:active {
 .top_section {
     background-color: rgba(0, 0, 0, 65%);
     height: 67.5rem;
-header {
+    header {
     color:aliceblue;
     position: relative;
     top: var(--header-top); 
@@ -111,7 +116,7 @@ header {
             border-color: transparent;
             background-color:aliceblue;
             color: black;
-            transition: background-color,color 100ms;
+            transition: background-color,color 100ms;  
         }
     }
     form {
@@ -296,13 +301,15 @@ header {
         text-align: center;
     }
     }
-    button {
-        width: max-content;
+    a {
         margin: auto;
+        width: max-content;
         padding: .5rem 1rem;
         border-radius: 2rem;
         border-color: transparent;
         background-color:aliceblue;
+        color: black;
+        transition: background-color,color 100ms;
     }
     .support {
         background:url(Pictures/small-service-cutomer-support_upscayl_4x_realesrgan-x4plus.jpg);
@@ -318,7 +325,6 @@ header {
         background-position: center;
     }
 }
-
 .services {
     .contents {
         figure {
@@ -542,6 +548,7 @@ header {
                 flex-direction: column;
                 align-items: center;
                 width:12rem;
+                transition: transform 1000ms;
             div {
                 width:4rem;
                 height:3.5rem;
@@ -564,6 +571,15 @@ header {
             }
     }
 }
+.how_we_work {
+    .contents {
+        .icons {
+            figure:hover {
+                transform: scale(1.2);
+            }
+        }
+    }
+}
 .our_plan {
     position: relative;
     background-color: rgb(14, 24, 0);
@@ -580,11 +596,14 @@ header {
         display: flex;
         flex-direction: column;
         gap:2rem;
-        button {
-            padding:.7rem;
+        a {
+            width: max-content;
+            padding: .5rem 1rem;
             border-radius: 2rem;
-            border-color:transparent;
-            width:40%;
+            border-color: transparent;
+            background-color:aliceblue;
+            color: black;
+            transition: background-color,color 100ms;
         }
         * {
             flex:1;
@@ -599,7 +618,7 @@ header {
         .upper {
             background-color:rgb(45, 71, 94);
             line-height: 2rem;
-            padding:1.5rem 0 0.5rem 0;
+            padding:1.5rem 0 2rem 0;
             border-radius: 1rem 1rem 0 0;
             display: flex;
             flex-direction: column;
@@ -611,16 +630,20 @@ header {
                 background-color: rgb(94, 176, 196);
                 color: black;
                 position: relative;
-                top:-2.5rem; 
+                top:-1rem; 
             }
             p:nth-of-type(4) {
                 font-size: .7rem;
                 margin-bottom:1rem;
             }
-            button {
+            a {
+                width: max-content;
+                padding: .5rem 1rem;
                 border-radius: 2rem;
-                border-color:transparent;
-                width:50%;
+                border-color: transparent;
+                background-color:aliceblue;
+                color: black;
+                transition: background-color,color 100ms;
             }
         }
         ul {    
@@ -633,15 +656,48 @@ header {
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            li {
-        
-            }
         }
         * {
             flex: 1;
         }
     }
 }
+.our_plan {
+    .header {
+        a:hover {
+            background-color: rgb(140, 155, 169);
+            cursor:pointer;
+        }
+        a:active {
+            background-color: white;
+            color:black;
+            cursor: pointer;
+        }
+    }
+    .card {
+        a:hover {
+            background-color: rgb(140, 155, 169);
+            cursor:pointer;
+        }
+        a:active {
+            background-color: white;
+            color:black;
+            cursor: pointer;
+        }
+    }
+}
+/*
+.top_section header .intro_text a:hover {
+    background-color: rgb(140, 155, 169);
+    cursor:pointer;
+}
+.top_section header .intro_text a:active {
+    background-color: white;
+    color:black;
+    cursor: pointer;
+}
+*/
+
 .your_choice {
     width: 90%;
     margin: 4rem auto 0 auto;
@@ -649,11 +705,15 @@ header {
     grid-template-columns:repeat(auto-fit,minmax(25rem,1fr));
     gap:2rem;
     .image {
+        overflow: hidden;
         width:100%;
         background-image: url(Pictures/small-manga-girl_upscayl_4x_realesrgan-x4plus.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        img {
+            transition: transform 1000ms;
+        }
     }
     .contents {
         width:100%;
@@ -688,15 +748,39 @@ header {
                 grid-area: list_four;
             }
         }
-        button {
-            width:50%;
+        a {
+            width: max-content;
+            padding: .5rem 1rem;
             border-radius: 2rem;
             border-color: transparent;
-            padding: .3rem 0;
-            margin: auto;
+            background-color:aliceblue;
+            color: black;
+            transition: background-color,color 100ms;
         }
     }
 }
+
+.your_choice {
+    .image {
+        img:hover {
+            transform:scale(1.2);
+            cursor: pointer;
+        }
+    }
+    .contents {
+        a:hover {
+            background-color:gray;
+            color:white;
+            cursor:pointer;
+        }
+        a:active {
+            background-color: white;
+            color:black;
+            cursor: pointer;
+        }
+    }
+}
+
 .closing_image {
     height:40rem;
     margin-top: 4rem;
@@ -721,7 +805,6 @@ footer {
         justify-self: center;
         display: flex;
         flex-direction: column; 
-        
         h1 {
             font-weight: normal;
             font-size: 1.9rem;
@@ -730,11 +813,14 @@ footer {
         .page_invitation {
             align-items: flex-start;
             gap:3rem;
-            button {
-                width:50%;
-                border-radius:2rem;
+            a {
+                width: max-content;
+                padding: .5rem 1rem;
+                border-radius: 2rem;
                 border-color: transparent;
-                padding:.5rem 0;
+                background-color:aliceblue;
+                color: black;
+                transition: background-color,color 100ms;
             }
         }
         .social_medias {
@@ -745,6 +831,8 @@ footer {
                 justify-content: start;
                 gap:2rem;
                 a {
+                    transition:color 100ms;
+                    color:white;
                     i {
                         font-size: 1.5rem;
                     }
@@ -756,12 +844,64 @@ footer {
         }
     }
     .copyright {
+        padding:3rem 0 0 0;
         height:2rem;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap:1rem;
         * {
             flex-shrink: 1;
+        }
+        a {
+            width: max-content;
+            padding: .5rem 1rem;
+            border-radius: 2rem;
+            border-color: transparent;
+            background-color:aliceblue;
+            color: black;
+            transition: background-color,color 100ms;
+        }
+    }
+}
+
+footer {
+    .foot_content {
+        .page_invitation {
+            a:hover {
+                background-color: rgb(140, 155, 169);
+                cursor:pointer;
+            }
+            a:active {
+                background-color: white;
+                color:black;
+                cursor: pointer;
+            }
+        }
+        .social_medias {
+            div {
+                a:hover {
+                    color:aqua;
+                    cursor:pointer;
+                }
+                a:active {
+                    color:black;
+                    cursor: pointer;
+                }
+            }
+        }    
+    }
+    .copyright {
+        a:hover {
+            background-color:grey;
+            color: white;
+            cursor:pointer;
+        }
+        a:active {
+            background-color: white;
+            color:black;
+            cursor: pointer;
         }
     }
 }
