--- a/katuun-responsive.css
+++ b/katuun-responsive.css
@@ -255,9 +255,9 @@
         font-size: 10px;
     }
 }
-@media (height < 320px) {
-    nav {
-        width: 100%;
-        position: relative;
+@media (height <= 320px) {
+    #nav_bar_ID {
+            width: 100% !important;
+            position:relative !important;
     }
 }
