--- a/katuun-general-css.css
+++ b/katuun-general-css.css
@@ -615,6 +615,7 @@ nav a:active {
         justify-self: center;
         width:80%;
         height:70%;
+        transition: transform 1000ms;
         .upper {
             background-color:rgb(45, 71, 94);
             line-height: 2rem;
@@ -685,19 +686,10 @@ nav a:active {
             cursor: pointer;
         }
     }
+    .card:hover {
+        transform: scale(1.2);
+    }
 }
-/*
-.top_section header .intro_text a:hover {
-    background-color: rgb(140, 155, 169);
-    cursor:pointer;
-}
-.top_section header .intro_text a:active {
-    background-color: white;
-    color:black;
-    cursor: pointer;
-}
-*/
-
 .your_choice {
     width: 90%;
     margin: 4rem auto 0 auto;
@@ -759,7 +751,6 @@ nav a:active {
         }
     }
 }
-
 .your_choice {
     .image {
         img:hover {
@@ -780,7 +771,6 @@ nav a:active {
         }
     }
 }
-
 .closing_image {
     height:40rem;
     margin-top: 4rem;
@@ -865,7 +855,6 @@ footer {
         }
     }
 }
-
 footer {
     .foot_content {
         .page_invitation {
