--- a/katuun-responsive.css
+++ b/katuun-responsive.css
@@ -198,6 +198,11 @@
             width: max-content !important;
             padding:.5rem .5rem;
         }
+        .upper {
+            p:first-of-type {
+                top:-2.5rem;
+            }
+        }
     }
 }
 }
