--- a/katuun-general-css.css
+++ b/katuun-general-css.css
@@ -31,7 +31,7 @@ a{
     text-decoration: none;
 
 }
-.nav_bar {
+.top_bar {
     background-color: rgba(0, 0, 0, 0.9); 
     color:white;
     position: fixed;
@@ -41,9 +41,13 @@ a{
     z-index: 5;
     width:90%;
     display: flex;
+    justify-content: space-between;
+    overflow-x: auto;
+    overflow-y: hidden;
     .logo {
+        flex-shrink: 0;
         display: flex;
-        width:40%;
+        gap:2rem;
         .logo_pic {
             width:4.5rem;
             height:4.5rem;
@@ -57,14 +61,10 @@ a{
         }
     }
     nav {
-        width: 60%;
-        min-width: 20rem;
-        overflow-x: auto;
-        overflow-y: hidden;
         display: flex;
         align-items: center; 
         justify-content: space-between;
-        gap: 3rem;
+        gap: 1rem;
         padding:0 1rem 0 1rem;
         a { 
             min-width: max-content;
@@ -510,23 +510,18 @@ nav a:active {
     background-color: var(--div-background-cheat);
 }
 .how_we_work {
+    background-color: black;
+    background-image: url(Pictures/how-we-work_upscayl_4x_realesrgan-x4plus.png);
+    background-position: center;
+    background-size: cover;
     position: relative;
     z-index:4;
-    .how_we_work_background {
-        height:30rem; 
-        background-image:url(Pictures/small-how-we-work_upscayl_4x_realesrgan-x4plus.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
     .contents {
         width: 100%;
         height:30rem; 
-        background-color: rgba(0, 0, 0, 0.749);
+        background-color: rgba(0, 0, 0, 0.701);
         padding:2rem 1rem;
         color: aliceblue;
-        position: absolute;
-        top:0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -537,7 +532,6 @@ nav a:active {
             text-align: center;
         }
         .icons {
-            height:max-content;
             width:100%;
             display: flex;
             justify-content: center;
@@ -772,7 +766,7 @@ nav a:active {
     }
 }
 .closing_image {
-    height:40rem;
+    height: 40rem;
     margin-top: 4rem;
     background-image: url(Pictures/small-last-pic-2_upscayl_4x_realesrgan-x4plus.jpg);
     background-repeat: no-repeat;
